# bicycle

./: .flake8  .gitignore  .python-version  Makefile  README.md  app.yaml  main.py  pyproject.toml  server.py
.github/workflows/: deploy.yml  lint.yaml
bicycle/: prompt.py  server.py  tables.py
bicycle/prompts/: billy.txt  citibike.txt.tpl  preamble01.txt.tpl
bicycle/static/: style.css
bicycle/templates/: base.html  index.html  noquery.html  response.html
data/: citibike.db
templates/: base.html  response.html
test/: test_prompt.py
